--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "test": "jest",
+    "update-snapshot-test": "npm test -- -u",
     "lint": "next lint",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
@@ -18,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-use": "^17.3.2",
     "recharts": "^2.1.9",
+    "sass": "^1.49.9",
     "swr": "^1.2.2"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
+    "storybook-addon-next": "^1.6.2",
     "typescript": "4.6.2",
     "webpack": "^5.70.0"
   }
