--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
     "storybook-addon-next": "^1.6.2",
+    "stylelint": "^14.6.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
     "typescript": "4.6.2",
     "webpack": "^5.70.0"
   }
