--- a/package.json
+++ b/package.json
@@ -36,19 +36,20 @@
     "@testing-library/react": "^12.1.4",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
+    "@types/react": "17.0.41",
     "babel-loader": "^8.2.3",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-storybook": "^0.5.7",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.7",
+    "scaffdog": "^1.2.0",
     "storybook-addon-next": "^1.6.2",
     "stylelint": "^14.6.0",
-    "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^3.0.0",
     "typescript": "4.6.2",
     "webpack": "^5.70.0"
   }
