--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-use": "^17.3.2",
     "recharts": "^2.1.9",
     "sass": "^1.49.9",
-    "swr": "^1.2.2"
+    "swr": "^1.2.2",
+    "zod": "^3.14.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
