--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "http-errors": "^2.0.0",
     "next": "12.1.0",
+    "open-color": "^1.9.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-use": "^17.3.2",
