--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/testing-library": "^0.0.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/http-errors": "^1.8.2",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.21",
