--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@visx/xychart": "^2.9.0",
     "http-errors": "^2.0.0",
     "next": "12.1.0",
     "open-color": "^1.9.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-use": "^17.3.2",
+    "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "swr": "^1.2.2",
     "zod": "^3.14.2"
